Enabled the code coverage reporting on scrutinizer-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,8 @@ php:
 
 before_script: composer install --dev
 
-script: phpunit --coverage-text
+script: phpunit --coverage-text --coverage-clover=coverage.clover
+
+after_script:
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
