--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: php
+
+sudo: false
+
 php:
     - 5.3
     - 5.4
@@ -6,10 +9,9 @@ php:
     - 5.6
     - hhvm
 
-before_script: composer install --dev
+install: composer install
 
 script: phpunit --coverage-text --coverage-clover=coverage.clover
 
 after_script:
-    - wget https://scrutinizer-ci.com/ocular.phar
-    - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+    - wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover
