--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "symfony/yaml": "~2.0"
+        "symfony/yaml": "~2.0|~3.0"
     },
     "require-dev": {
         "composer/composer": "1.0.*@dev",
         "phpspec/prophecy-phpunit": "~1.0",
-        "symfony/filesystem": "~2.2"
+        "symfony/filesystem": "~2.2|~3.0"
     },
     "autoload": {
         "psr-4": { "Incenteev\\ParameterHandler\\": "" }
