--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,15 @@ php:
     - 5.6
     - 7.0
     - hhvm
+    - php: 5.6
+      env: DEPS=dev SYMFONY_VERSION='2.8.*'
+    - php: 5.6
+      env: DEPS=dev SYMFONY_VERSION='3.0.x-dev as 2.8'
+
+before_install:
+  - composer self-update
+  - if [ "$DEPS" = 'dev' ]; then perl -pi -e 's/^}$/,"minimum-stability":"dev"}/' composer.json; fi;
+  - if [ "$SYMFONY_VERSION" != "" ]; then composer require --no-update "symfony/symfony:${SYMFONY_VERSION}"; fi;
 
 install: composer install
 
