--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "symfony/yaml": "~2.3|~3.0"
+        "symfony/yaml": "~2.3|~3.0",
+        "seld/jsonlint": "~1.4"
     },
     "require-dev": {
         "composer/composer": "1.0.*@dev",
         "phpspec/prophecy-phpunit": "~1.0",
-        "symfony/filesystem": "~2.2"
+        "symfony/filesystem": "~2.2",
+        "symfony/var-dumper": "~2.8"
     },
     "autoload": {
         "psr-4": { "Incenteev\\ParameterHandler\\": "" }
