--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require-dev": {
         "composer/composer": "1.0.*@dev",
         "phpspec/prophecy-phpunit": "~1.0",
-        "symfony/filesystem": "~2.2"
+        "symfony/filesystem": "~2.2|~3.0"
     },
     "autoload": {
         "psr-4": { "Incenteev\\ParameterHandler\\": "" }
