--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,20 @@
 {
-    "name": "incenteev/composer-parameter-handler",
+    "name": "serrvius/composer-parameter-handler",
     "description": "Composer script handling your ignored parameter file",
-    "keywords": ["parameters management"],
-    "homepage": "https://github.com/Incenteev/ParameterHandler",
+    "keywords": ["parameters management multilevel groups multiple-keys"],
+    "homepage": "https://github.com/serrvius/ParameterHandler",
     "license": "MIT",
     "authors": [
         {
             "name": "Christophe Coevoet",
             "email": "stof@notk.org"
+        },
+        {
+            "name": "Sergiu Botnarenco (version 2.1.5)",
+            "email": "serrvius@gmail.com"
         }
     ],
+    "version": "2.1.3",
     "require": {
         "php": ">=5.3.3",
         "symfony/yaml": "~2.3|~3.0"
@@ -20,7 +25,7 @@
         "symfony/filesystem": "~2.2"
     },
     "autoload": {
-        "psr-4": { "Incenteev\\ParameterHandler\\": "" }
+        "psr-4": { "Serrvius\\ParameterHandler\\": "" }
     },
     "extra": {
         "branch-alias": {
