--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
         - php: 5.5
         - php: 5.6
         - php: 7.0
+        - php: 7.1
           env: DEPENDENCIES=dev
         - php: hhvm
 
