--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         "symfony/yaml": "^2.3 || ^3.0 || ^4.0"
     },
     "require-dev": {
-        "composer/composer": "^1.0",
-        "phpspec/prophecy-phpunit": "~1.0",
-        "symfony/filesystem": "^2.2 || ^3.0 || ^4.0"
+        "composer/composer": "^1.0@dev",
+        "symfony/filesystem": "^2.3 || ^3 || ^4",
+        "symfony/phpunit-bridge": "^4.0"
     },
     "autoload": {
         "psr-4": { "Incenteev\\ParameterHandler\\": "" }
