--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
     global:
         - SYMFONY_PHPUNIT_DIR=$HOME/.phpunit-bridge
         - SYMFONY_PHPUNIT_REMOVE='' # don't remove prophecy
+        - SYMFONY_PHPUNIT_REMOVE_RETURN_TYPEHINT=1
 
 php: [7.2, 7.1, 7.0, 5.6, 5.5, 5.4]
 
