--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ matrix:
           env: COMPOSER_FLAGS='--prefer-lowest --prefer-stable'
         - php: 5.3
           dist: precise
+        - php: 5.4
+          dist: trusty
+        - php: 5.5
+          dist: trusty
         - php: 7.2
           env: STABILITY=dev
 
