--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,12 @@ env:
         - SYMFONY_PHPUNIT_DIR=$HOME/.phpunit-bridge
         - SYMFONY_PHPUNIT_REMOVE='' # don't remove prophecy
 
-php: [7.2, 7.1, 7.0, 5.6, 5.5, 5.4]
+php: [7.4, 7.3, 7.2]
 
 matrix:
     include:
         - php: 7.2
           env: COMPOSER_FLAGS='--prefer-lowest --prefer-stable'
-        - php: 5.3
-          dist: precise
         - php: 7.2
           env: STABILITY=dev
 
