--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
         - SYMFONY_PHPUNIT_REMOVE='' # don't remove prophecy
         - SYMFONY_PHPUNIT_REMOVE_RETURN_TYPEHINT=1
 
-php: [7.2, 7.1, 7.0, 5.6]
+php: [7.4, 7.3, 7.2, 7.1, 7.0, 5.6]
 
 matrix:
     include:
@@ -25,7 +25,7 @@ matrix:
           dist: trusty
         - php: 5.5
           dist: trusty
-        - php: 7.2
+        - php: 7.4
           env: STABILITY=dev
 
 before_install:
