--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require-dev": {
         "composer/composer": "^1.0@dev",
         "symfony/filesystem": "^2.3 || ^3 || ^4 || ^5 || ^6.0",
-        "symfony/phpunit-bridge": "^4.0 || ^5.0 || ^6.0"
+        "symfony/phpunit-bridge": "^3.4.47 || ^4.4.41 || ^5.4.8 || ^6.0"
     },
     "autoload": {
         "psr-4": { "Incenteev\\ParameterHandler\\": "" }
