--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,11 +9,11 @@ jobs:
     name: Check composer.json
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: shivammathur/setup-php@v2
         with:
           coverage: none
-          php-version: '8.0'
+          php-version: '8.3'
       - run: composer validate --strict --no-check-lock
 
   tests:
@@ -26,12 +26,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ '5.3', '5.4', '5.5', '5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1' ]
+        php: ['7.4', '8.0', '8.1', '8.2', '8.3' ]
         min_stability: [ '' ]
         name_suffix: [ '' ]
         composer_flags: [ '' ]
         include:
-          - php: '8.0'
+          - php: '8.3'
             min_stability: 'dev'
             name_suffix: ' (dev deps)'
           - php: '7.4'
@@ -40,7 +40,7 @@ jobs:
             composer_flags: '--prefer-lowest --prefer-stable'
 
     steps:
-      -   uses: actions/checkout@v2
+      -   uses: actions/checkout@v4
       -   uses: shivammathur/setup-php@v2
           with:
             coverage: "none"
@@ -53,8 +53,5 @@ jobs:
       -   name: Install dependencies
           run: composer update --ansi --no-progress --prefer-dist --no-interaction ${{ matrix.composer_flags }}
 
-      -   name: Install PHPUnit
-          run: vendor/bin/simple-phpunit install
-
       -   name: Run tests
-          run: vendor/bin/simple-phpunit
+          run: vendor/bin/phpunit
