--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: shivammathur/setup-php@v2
         with:
           coverage: none
-          php-version: '8.3'
+          php-version: '8.4'
       - run: composer validate --strict --no-check-lock
 
   tests:
@@ -26,12 +26,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['7.4', '8.0', '8.1', '8.2', '8.3' ]
+        php: ['7.4', '8.0', '8.1', '8.2', '8.3', '8.4' ]
         min_stability: [ '' ]
         name_suffix: [ '' ]
         composer_flags: [ '' ]
         include:
-          - php: '8.3'
+          - php: '8.4'
             min_stability: 'dev'
             name_suffix: ' (dev deps)'
           - php: '7.4'
